examples/reference/linker_regions_phase6_unknown_section.err
Assembly failed:
5: ERROR [asm202]
    5 | .place missing in ram
 ^
ERROR: Unknown section in placement directive: missing
